syntax = "proto3";

package silenteight.datasource.api.name.v1;

import "google/api/annotations.proto";

option java_package = "com.silenteight.datasource.api.name.v1";
option java_outer_classname = "NameProto";
option java_multiple_files = true;

/**
  Intended to be used by
  - name agent
  - guess gender agent
  - region agent
 */
service NameInputService {
  rpc BatchGetMatchNameInputs (BatchGetMatchNameInputsRequest) returns (stream BatchGetMatchNameInputsResponse) {
    option (google.api.http) = {
      post: "/agent-inputs/name/versions/v1/matches:batchGet"
      body: "*"
    };
  }
}

message BatchGetMatchNameInputsRequest {
  // The list of matches data is requested for, in form of `alerts/<Alert ID>/matches/<Match ID>`.
  repeated string matches = 1;
  // The list of features the input data for each match is requested, in form of `features/<Feature ID>`.
  repeated string features = 2;
}

message BatchGetMatchNameInputsResponse {
  repeated NameInput name_inputs = 1;
}

message NameInput {
  string match = 1;
  repeated NameFeatureInput name_feature_inputs = 2;
}

message NameFeatureInput {
  string feature = 1;

  repeated AlertedPartyName alerted_party_names = 2;
  repeated WatchlistName watchlist_names = 3;
  EntityType alerted_party_type = 4;

  // List of strings that screening engine matched (used only for Organization)
  repeated string matching_texts = 5;

  enum EntityType {
    ENTITY_TYPE_UNSPECIFIED = 0;
    INDIVIDUAL = 1;
    ORGANIZATION = 2;
  }
}

message AlertedPartyName {
  string name = 1;
}

message WatchlistName {
  string name = 1;
  NameType type = 2;

  enum NameType {
    NAME_TYPE_UNSPECIFIED = 0;
    // The regular name used by the watchlist party.
    REGULAR = 1;
    // The name used as an alias of the watchlist party.
    ALIAS = 2;
  }
}
